--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
-    <title>Garage-UI</title>
+    <title>Garage-UI-Mountain-Edition</title>
   </head>
   <body>
     <div id="root"></div>
